[package]
name = "menutests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
bevy_asset_loader = {version = "0.17", features = ["2d"]}
bevy_ecs_ldtk = "0.8"
bevy_ecs_tilemap = "0.11"
bevy_tweening = "0.9.0"
